--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ CacheControl==0.12.6
 cachetools==4.2.2
 cachy==0.3.0
 Cerberus==1.3.4
-certifi==2020.12.5
+certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 cleo==0.7.6
@@ -58,6 +58,7 @@ Keras-Preprocessing==1.1.2
 keyring==20.0.1
 kiwisolver==1.3.1
 lockfile==0.12.2
+lxml==4.6.3
 m2r==0.2.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
@@ -65,11 +66,13 @@ matplotlib==3.4.2
 mistune==0.8.4
 msgpack==1.0.2
 multidict==5.1.0
+multitasking==0.0.9
 nltk==3.6.2
 numpy==1.20.3
 oauthlib==3.1.0
 opt-einsum==3.3.0
 packaging==20.9
+pandas==1.2.4
 parso==0.5.2
 pastel==0.2.1
 pexpect==4.8.0
@@ -90,10 +93,12 @@ PyOpenGL==3.1.5
 pyparsing==2.4.7
 pyquil==1.9.0
 pyrsistent==0.14.11
+pyTelegramBotAPI==3.7.9
 python-dateutil==2.8.1
 python-jsonrpc-server==0.3.2
 python-language-server==0.31.10
-pyxel
+pytz==2021.1
+pyxel==1.0.1
 referenceqvm==0.3
 regex==2021.4.4
 replit==3.1.0
@@ -106,6 +111,7 @@ ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
 scipy==1.4.1
 SecretStorage==3.3.1
+setuptools==1.0
 shellingham==1.4.0
 six==1.16.0
 sounddevice==0.4.1
@@ -129,4 +135,5 @@ yapf==0.31.0
 yarg==0.1.9
 yarl==1.6.3
 yaspin==2.0.0
+yfinance==0.1.59
 zipp==3.4.1
