--- a/requirements.txt
+++ b/requirements.txt
@@ -98,7 +98,7 @@ python-dateutil==2.8.1
 python-jsonrpc-server==0.3.2
 python-language-server==0.31.10
 pytz==2021.1
-pyxel==1.0.1
+pyxel
 referenceqvm==0.3
 regex==2021.4.4
 replit==3.1.0
